--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -29,7 +29,7 @@ While the individual results of this work might not be surprising, taken togethe
 More concretely, our key contributions are,
 
 \begin{enumerate}
-	\item \textbf{Defining the key technical features of Blockchain technology.}
+	\item \textbf{Defining the key technical properties of Blockchain technology.}
 	Based on the results of our analysis we identify three key properties for Blockchain technology: shared governance and operation, an append-only ledger, and replication.
 	Blockchain systems are both governed and operated by a distributed collection of entities that individually and collectively ensure that all operations are valid.
 	These operations are recorded in an append-only ledger that provides full-system provenance.
