--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -108,8 +108,8 @@ These documents were all blog posts, representing the most up-to-date thinking o
 In this process, no new codes were discovered, indicating that our process had produced concepts that thoroughly describe Blockchain technology.
 
 \subsubsection{Stage 3---Selective Coding}
-In the third stage, two researchers transfered all of the concepts onto sticky-notes.
-They then drew connecting lines between the concepts, describing how the concepts related to one another.
+In the third stage, two researchers transfered all of the concepts related to technical properties and use cases onto sticky-notes.
+They then drew connecting lines between these concepts, describing how they related to one another.
 Based on these interconnections, concepts were divided into five different categories, each with an associated color:
 
  \renewcommand{\labelitemi}{$\blacksquare$}
@@ -127,23 +127,27 @@ Based on these interconnections, concepts were divided into five different categ
 \end{itemize}
  \renewcommand{\labelitemi}{\textbullet}
 
-Figures for each of these categories are given throughout the paper and in the appendix (see Figures~??).
+Our categorization resulted in 25 technical primitives, 17 technical properties, 12 normative properties, 11 capabilities, and 19 use cases.
+Figures for each of these categories are given throughout the paper and in the appendix (see Figures~\ref{fig:technical-properties}, ??).
 Within these figures, arrows between concepts indicate that the source concept is used to support the destination concept.
 In some cases, one concepts supports several properties, and for convenience this is represented as that concept surrounding the concepts it supports.
-While we divide the concepts into these five categories, individual concepts are highly interconnected. This provides credence to the notion that Blockchain technology overall is a cohesive, with each of the component concepts serving a purpose in the overall technology.
+While we divide the concepts into these five categories, individual concepts are highly interconnected, both inter- and intra-category. 
+This provides credence to the notion that Blockchain technology overall is a cohesive, with each of the component concepts serving a purpose in the overall technology.
 
-At this stage of the research, we allowed researcher expertise to begin influencing the results.
+This is the first stage of our methodology where research expertise directly influenced the results.
 First, by its very nature drawing connections between concepts is subjective.
-As much as possible, we attempted to identify text in the underlying documents that supported our connections, but in several cases we created connections that were not explicitly mentioned in the text.
-Second, a handful of primitives were added that we determined were necessary to build some of the technological properties, but had not been discussed in the documents.
+In most cases, these connections were directly motivated by explicit references in the text, but in several cases we drew connections that we felt were implicit within the text.
+Second, a handful of primitives were added that we determined were necessary to build some of the technological properties, but had not been discussed in the documents. 
+As these items were primitives, and not properties, they do not affect the overall results discussed in this paper.
 Third, we identified several misconceptions that either shared no connections with the rest of the concepts or were obviously false (e.g., cryptographic signatures do not provide confidentiality).
 In each of these three cases, our research notes kept track of what was explicitly supported by the analyzed data and what was the result of researcher interpretation.
 
 \subsubsection{Stage 4---Theory Generation}
-In the fourth and final stage, we used the categories, their connections, and our results to derive several theories (i.e., research results from our analysis) regarding Blockchain.
-First, we derived a concrete set of properties and capabilities describing precisely what Blockchain technology is, and what it isn't.
-Second, we were able to produce a clean split between Blokchain technology's technological primitives and its normative properties (i.e., hype).
-Third, we identified criteria that help determine whether a given problem can benefit from the use of Blockchain technology.
+In the fourth and final stage, we used the concepts, categories, and connections derived from the first three stages of our grounded theory, along with our research notes and researcher expertises to derive several theories (i.e., research results from our analysis) regarding Blockchain technology.
+First, we subdivided the technical properties into three categories that give a high-level description of what Blockchain technology is (see Section~\ref{sec:blockchain}).
+Second, we extracted the capabilities, limitations/challenges, and use cases that are most relevant to Blockchain technology (see Section~\ref{sec:capabilities}, \ref{sec:challenges}, and \ref{sec:use-cases}, respectively).
+Third, we described how Blockchain technology differs from other distributed technologies (see Section~\ref{sec:distributed-comparison}) and identified criteria that help determine whether a given problem can benefit from the use of Blockchain technology (see Section~\ref{sec:should-i-use-it}).
+Finally, we found that there is a clean split between Blokchain technology's technological primitives and its normative properties (i.e., hype) (see Section~\ref{sec:normative}).
 
 \subsubsection{Limitations}
 Due to the nature of grounded theory, our analysis of the data represents one view on that data.
