--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -1,6 +1,7 @@
 % !TEX root = ../main.tex
 
 \section{Blockchain Technology's Use Cases}
+\label{sec:use-cases}
 
 %\textbf{TODO: Insert references, especially for each class}
 %\textbf{TODO: discuss how we count applications.  I've called several things to be special cases of others--ok?}
