Several more tweaks to the methodology.

--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -127,20 +127,18 @@ Based on these interconnections, concepts were divided into five different categ
 \end{itemize}
  \renewcommand{\labelitemi}{\textbullet}
 
-Our categorization resulted in 25 technical primitives, 17 technical properties, 12 normative properties, 11 capabilities, and 19 use cases.
+Our categorization resulted in 21 technical primitives, 16 technical properties, 12 normative properties, 12 capabilities, and 19 use cases.
 Figures for each of these categories are given throughout the paper and in the appendix (see Figures~\ref{fig:technical-properties}, ??).
 Within these figures, arrows between concepts indicate that the source concept is used to support the destination concept.
-In some cases, one concepts supports several properties, and for convenience this is represented as that concept surrounding the concepts it supports.
+In some cases, several concepts (e.g., open governance and consortium governance) derive from a single parent concept (e.g., governance) and this is represented by having a box for the parent concept that surrounds the children concepts.
 While we divide the concepts into these five categories, individual concepts are highly interconnected, both inter- and intra-category. 
 This provides credence to the notion that Blockchain technology overall is a cohesive, with each of the component concepts serving a purpose in the overall technology.
 
 This is the first stage of our methodology where research expertise directly influenced the results.
 First, by its very nature drawing connections between concepts is subjective.
 In most cases, these connections were directly motivated by explicit references in the text, but in several cases we drew connections that we felt were implicit within the text.
-Second, a handful of primitives were added that we determined were necessary to build some of the technological properties, but had not been discussed in the documents. 
-As these items were primitives, and not properties, they do not affect the overall results discussed in this paper.
-Third, we identified several misconceptions that either shared no connections with the rest of the concepts or were obviously false (e.g., cryptographic signatures do not provide confidentiality).
-In each of these three cases, our research notes kept track of what was explicitly supported by the analyzed data and what was the result of researcher interpretation.
+Second, we identified several misconceptions that either shared no connections with the rest of the concepts or were obviously false (e.g., cryptographic signatures do not provide confidentiality).
+In both of these situations, our research notes kept track of what was explicitly supported by the analyzed data and what was the result of researcher interpretation.
 
 \subsubsection{Stage 4---Theory Generation}
 In the fourth and final stage, we used the concepts, categories, and connections derived from the first three stages of our grounded theory, along with our research notes and researcher expertises to derive several theories (i.e., research results from our analysis) regarding Blockchain technology.
