--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -128,8 +128,8 @@ Based on these interconnections, concepts were divided into five different categ
  \renewcommand{\labelitemi}{\textbullet}
 
 Our categorization resulted in 21 technical primitives, 16 technical properties, 12 normative properties, 12 capabilities, and 19 use cases.
-Figures for each of these categories are given throughout the paper and in the appendix (see Figures~\ref{fig:technical-properties}, ??).
-Within these figures, arrows between concepts indicate that the source concept is used to support the destination concept.
+Figures for the technical properties, capabilities, and normative properties are given in the throughout the paper (see Figures~\ref{fig:technical-properties} with the primitives and use cases discussed in the text of the paper.
+Within these figures, arrows represent dependency relationships---i.e., the source concept is used to support the destination concept.
 In some cases, several concepts (e.g., open governance and consortium governance) derive from a single parent concept (e.g., governance) and this is represented by having a box for the parent concept that surrounds the children concepts.
 While we divide the concepts into these five categories, individual concepts are highly interconnected, both inter- and intra-category. 
 This provides credence to the notion that Blockchain technology overall is a cohesive, with each of the component concepts serving a purpose in the overall technology.
