--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -7,10 +7,25 @@ This analysis revealed three key groups of properties: shared governance and ope
 By themselves, these components are nothing new, but used together they form what is known as \emph{Blockchain technology} or \emph{Blockchain} for short.
 
 \begin{figure*}
-	\includegraphics[width=\textwidth]{figures/technical-properties}	
+	\centering
+	\includegraphics[width=1.25\columnwidth]{figures/technical-properties}	
 	\caption{Technical Properties for Blockchain Technology.}
 	\label{fig:technical-properties}
 \end{figure*}
+
+\begin{figure*}
+	\centering
+	\includegraphics[width=1.25\columnwidth]{figures/capabilities}	
+	\caption{Capabilities for Blockchain Technology.}
+	\label{fig:capabilities}
+\end{figure*}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\columnwidth]{figures/normative-properties}	
+	\caption{Normative Properties for Blockchain Technology.}
+	\label{fig:normative-properties}
+\end{figure}
 
 \subsection{Shared Governance and Operation}
 At the heart of Blockchain technology is the principle of shared governance and operation.
