--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -6,19 +6,19 @@ Our description of Blockchain technology is based on the technical properties id
 This analysis revealed three key groups of properties: shared governance and operation, a cryptographically-authenticated append-only ledger, and resilience.
 By themselves, these components are nothing new, but used together they form what is known as \emph{Blockchain technology} or \emph{Blockchain} for short.
 
-\begin{figure*}
+\begin{figure}
 	\centering
-	\includegraphics[width=1.25\columnwidth]{figures/technical-properties}	
+	\includegraphics[width=\columnwidth]{figures/technical-properties}	
 	\caption{Technical Properties for Blockchain Technology.}
 	\label{fig:technical-properties}
-\end{figure*}
+\end{figure}
 
-\begin{figure*}
+\begin{figure}
 	\centering
-	\includegraphics[width=1.25\columnwidth]{figures/capabilities}	
+	\includegraphics[width=\columnwidth]{figures/capabilities}	
 	\caption{Capabilities for Blockchain Technology.}
 	\label{fig:capabilities}
-\end{figure*}
+\end{figure}
 
 \begin{figure}
 	\centering
